fix: notification visual alignment

--- a/src/app/shared/components/snackbar/notification/notification.component.scss
+++ b/src/app/shared/components/snackbar/notification/notification.component.scss
@@ -1,5 +1,7 @@
 :host {
   display: flex;
+  align-items: center;
+  justify-content: space-between;
   mat-icon {
     margin: auto;
   }
